2006-05-25  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Switch to IT_PROG_INTLTOOL([0.35.0) and move
	ALL_LINGUAS to po/LINGUAS.
	* po/LINGUAS: Added.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2005-08-18  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2005-07-23  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-05-16  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Require gtk+-2.0 >= 2.6.0.
	* src/commands.c (about_command): Rename "translator_credits" to
	"translator-credits".

2005-04-29  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Release gtetrinet 0.7.9.

2005-04-29  Jordi Mallach  <jordi@sindominio.net>

	* src/client.c: Patch from Julien Plissonneau Duquène to
	fix network latency.

	* NEWS: pdate for 0.7.9.

2005-04-15  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c: Applied patch from Julien Plissonneau Duquène which
	fixes a segfault in the channel list.
	
	* NEWS: Update for 0.7.9.

2005-04-12  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.7.9.

2005-04-01  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-26  Pedro Villavicencio Garrido  <pvillavi@gnome.org> 

	* src/commands.c (about_command): use GtkAboutDialog instead 
	of deprecated GnomeAbout.
	(handle_links): added for handle the links in the about dialog.
	* src/commands.h (handle_links): added to the function list.

2005-03-29  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-03-18  Dani Carbonell  <bocata@panete.net>

	* src/client.c
	* src/dialogs.c
	* src/fields.c
	* src/misc.c
	* src/misc.h
	* src/partyline.c
	* src/tetrinet.c
	* src/winlist.c: Applied patch from Vidar Holen, which implements
	proper UTF-8 support. Just convert all incoming data to UTF-8, and
	avoid any other conversion. Rocks!
